correction mobile, footer placé sur la gauche

--- a/style.css
+++ b/style.css
@@ -607,7 +607,7 @@ footer {
     }
 
     .footer_col {
-        align-items: center;
+        padding-left: 60px;
     }
 
     .menu {
